--- a/app/src/main/res/layout/activity_meal_page.xml
+++ b/app/src/main/res/layout/activity_meal_page.xml
@@ -6,4 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".MealPage">
 
+    <Button
+        android:id="@+id/delete_meal_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="275dp"
+        android:layout_marginBottom="599dp"
+        android:text="Delete Meal"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/is_offered_switch" />
+
+    <Switch
+        android:id="@+id/is_offered_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginEnd="254dp"
+        android:layout_marginBottom="28dp"
+        android:text="Offer Meal"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/delete_meal_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
