Added Add Meal activity

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,5 +12,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">#776871</item>
         <!-- Input Color -->
+        <item name="buttonIconTint">#ffe0c9</item>
     </style>
 </resources>
