--- a/app/src/main/res/layout/activity_meal_page.xml
+++ b/app/src/main/res/layout/activity_meal_page.xml
@@ -10,14 +10,13 @@
         android:id="@+id/delete_meal_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="275dp"
-        android:layout_marginBottom="599dp"
         android:text="Delete Meal"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/is_offered_switch" />
 
@@ -26,14 +25,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="254dp"
-        android:layout_marginBottom="28dp"
         android:text="Offer Meal"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/delete_meal_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/meal_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="30dp"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
