Added support for admin & client login

--- a/app/src/main/res/layout/activity_client_register.xml
+++ b/app/src/main/res/layout/activity_client_register.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="25dp"
         android:ems="10"
         android:hint="Credit Card Number"
-        android:inputType="textShortMessage"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginEnd="25dp"
         android:ems="10"
         android:hint="CCV"
-        android:inputType="textEmailAddress"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
