Added cook registration xml CookRegistration.java still needs to store data to Firebase

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,13 @@
         <!-- Input Color -->
         <item name="buttonIconTint">#ffe0c9</item>
     </style>
+
+    <style name="Theme.MealerApp.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.MealerApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.MealerApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
