--- a/app/src/main/res/layout/activity_cook_home.xml
+++ b/app/src/main/res/layout/activity_cook_home.xml
@@ -24,59 +24,67 @@
         android:id="@+id/client1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="100dp"
         android:text="test@test.com"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/client_page_title2"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/client_page_title2" />
 
     <TextView
         android:id="@+id/client"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="150dp"
         android:text="test2@test.com"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/client_page_title2"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/client_page_title2" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="103dp"
         android:layout_height="38dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="96dp"
         android:text="Approve"
         android:textAllCaps="false"
-        tools:layout_editor_absoluteX="177dp"
-        tools:layout_editor_absoluteY="169dp" />
+        app:layout_constraintStart_toEndOf="@+id/client1"
+        app:layout_constraintTop_toBottomOf="@+id/client_page_title2" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="103dp"
         android:layout_height="38dp"
+        android:layout_marginStart="19dp"
         android:layout_marginTop="144dp"
         android:text="Approve"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@+id/client_page_title2"
-        tools:layout_editor_absoluteX="177dp" />
+        app:layout_constraintStart_toEndOf="@+id/client"
+        app:layout_constraintTop_toBottomOf="@+id/client_page_title2" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="103dp"
         android:layout_height="38dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="168dp"
         android:backgroundTint="#ed5555"
         android:text="Reject"
         android:textAllCaps="false"
-        tools:layout_editor_absoluteX="292dp"
-        tools:layout_editor_absoluteY="168dp" />
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="103dp"
         android:layout_height="38dp"
+        android:layout_marginStart="11dp"
         android:layout_marginTop="218dp"
         android:backgroundTint="#ed5555"
         android:text="Reject"
         android:textAllCaps="false"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="292dp" />
+        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
